# sentiment-api

./: .gitignore  CLAUDE.md  README.md  export_model.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
rust-addon/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json
rust-addon/.github/workflows/: CI.yml
rust-addon/src/: lib.rs
src/: server.ts
