[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "rust_addon"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
